style_game.css
@import url('https://fonts.googleapis.com/css?family=Open+Sans');
body {
	background-color: rgb(50,50,50);
	text-align: center;
	/*background-image: url("background.jpg");*/
}

h1 {
	font-family: Open Sans;
	color: orange;
	text-align: center;
	font-size: 40px;
}

#board {
	background-color: blue;
	display: inline-block;
}

.col {
	width: 70px;
	height: 70px;
	display: inline-block;
	background-color: white;
	border-radius: 50%;
	margin: 5px;
}

.col.empty {
	cursor: pointer;
}

.next-red {
	background-color: rgb(255, 100, 100);
}

.red {
	background-color: red;
}

.next-yellow {
	background-color: rgb(200, 200, 0);
}

.yellow {
	background-color: yellow;
}

.Content{
	position: relative;
	z-index: 1;
}
.Content:after{
	content: '';
	clear: both;
	display: block;
}

.Wrapper{
	position: absolute;
	width: 100%;
	height: 100%;
}
.Wrapper > div{
	height: 100%;
}

.CenterContent{
	float: left;
	padding-left: 10%;
}

.RightContent{
	float: right;
	padding-right: 15%;
}


.username {
	font-family: Arial;
	word-break: break-all;
	padding-right: 5px;
	display: inline-block;
	font-size: 12px;
}

.msgbody {
	font-family: Arial;
	word-break: break-all; 
	display: inline-block;
	color: rgb(50, 50, 50);
	font-size: 12px;
}

.chat_log {
	word-break: break-all;
	overflow-x: hidden;
	padding-left: 10px;
	padding-right: 10px;
	text-align: left;
	overflow-y: scroll;
	cursor: default;
	background-color: white;
}

.chat {
	padding-left: 3.5px;
	border-radius: 0px;
	height: 20px;
	transition-duration: 0.4s;
	font-size: 10px;
	color: white;
	background-color: orange;
	border-style: solid;
	border-width: 0px;
	border-color: rgb(50,50,50);
}

.chat:hover {
	background-color: white;
	border-style: solid;
	border-width: 0px;
	border-color: brown;
	color: orange;
	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
}

